<resources>
    <string name="app_name">GameVault</string>
    <string name="exercise">Exercise</string>
    <string name="enter_an_exercise">Enter an Exercise</string>
    <string name="weight">Weight</string>
    <string name="enter_a_weight">Enter a Weight</string>
    <string name="enter_reps">Enter Reps</string>
    <string name="reps">Reps</string>
    <string name="log">Log!</string>
    <string name="nothing_to_show_time_to_hit_the_gym">Nothing to show, time to hit the gym!</string>
    <string name="login_welcome">Welcome to the GameVault.\nPlease Sign in.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="preference_file_key">daclinkPreferenceFileNamegamevault</string>
    <string name="preference_userId_key">daclinkPreferenceUserIdKeygamevault</string>
    <string name="create_account">Create Account</string>
    <string name="admin_button">Admin Button</string>
<<<<<<< HEAD
    <string name="search_button" />
    <string name="search">search</string>
    <string name="browse">browse</string>
    <string name="browse_games">browse games</string>
    <string name="game_vault">Game Vault</string>
    <string name="game">game</string>
    <string name="vault">vault</string>
    <string name="Game">Game</string>
    <string name="Vault">Vault</string>
    <string name="home">Home</string>
    <string name="welcome_to_gamevault">Welcome to GameVault</string>
=======
    <string name="welcome_to_gamevault">Welcome to GameVault</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password"> Confirm Password </string>
    <string name="back_to_login"> Back to Home </string>
    <string name="manage_users">Manage Users</string>
    <string name="welcome">Welcome,</string>
    <string name="back_to_home">Back to Home</string>
    <string name="promote_users">Promote Users</string>
>>>>>>> 1cb785a9a660036d9673f854edd1d25d7e903168
    <string name="settings">Settings</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="cancel">Cancel</string>
<<<<<<< HEAD
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="back_to_home">Back to Home</string>
    <string name="type_a_game_to_search_for">Type a game to search for</string>
    <string name="welcome">welcome</string>
    <string name="manage_users">manage users</string>
    <string name="promote_users">promote users</string>
    <string name="explore">Explore</string>
    <string name="genre_name">Genre Name</string>

    =======
>>>>>>> 1cb785a9a660036d9673f854edd1d25d7e903168
</resources>