<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gamevault.LoginActivity">

    <TextView
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#d6001c"
        android:text="@string/settings"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/changeUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Settings"
        android:hint="@string/enter_new_username"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/changeUserName"
        android:hint="@string/enter_new_password"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/confirmChangesButton"
        android:background="#444444"
        android:textColor="#d6001c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_changes"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/changePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        />

    <Button
        android:id="@+id/backToMainButton"
        android:background="#444444"
        android:textColor="#d6001c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/confirmChangesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>